🎨 update page description

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="DApp for minting Big Green Dildo NFTs"
+      content="BGD (Big Green Dildo), the legendary crypto token that's sticking it where the Sun doesn't shine in the SEC with the grace of a dog with two dicks."
     />
     <link rel="apple-touch-icon" href="/src/assets/bdg-thumbs-up.png" />
     <!--
